Authors collection and GET request
