# routes/authors.js
@@ -1,0 +1,10 @@
+const express = require('express');
+const router = express.Router();
+
+const authorController = require('../controllers/authors');
+
+router.get('/', authorController.getAll);
+
+
+
+module.exports = router;
